outputs/generated_env/kubernetes/network_policies/cybersim-subnet-1-allow-wordpress-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-wordpress-to-redis
  namespace: cybersim-subnet-1
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-1
      podSelector:
        matchLabels:
          app.kubernetes.io/name: wordpress
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
